<resources>
    <string name="app_name">溜吧</string>
    <string name="forget_sercet"><u>忘记密码</u></string>
    <string name="title_activity_order_input">OrderInputActivity</string>
    <string name="title_back">返回</string>
    <string name="title_confirm">确定</string>
    <string name="order">订单</string>
    <string name="hint_reservation_date">点击选择预约日期</string>
    <string name="hint_start_time">点击选择开始时间</string>
    <string name="hint_time_long">遛狗时长（小时）</string>
    <string name="hint_liu_area">遛狗区域（千米）</string>
    <string name="fee_tips">说明:服务时间内,每半小时收费30元</string>

    <string name="hint_user_name">在此输入用户姓名</string>
    <string name="hint_user_phone">在此输入用户电话</string>
    <string name="hint_user_address">在此输入用户地址</string>
    <string name="hint_fee_total">合计</string>
    <string name="edit_text">修改</string>

    <string name="pay_select">去支付>></string>
    <string name="pay_success_tips">感谢您使用“溜吧”\n\n订单正在处理中，遛狗师会很快与您取得联系\n\n请保持电话畅通</string>

    <string-array name="sexArray">
        <item>公</item>
        <item>母</item>
    </string-array>
    <string-array name="userType">
        <item>狗主人</item>
        <item>遛狗师</item>
    </string-array>
    <!--松狮\阿拉斯加\比熊\法国斗牛\贵宾犬\哈士奇\金毛\拉布拉多\萨摩耶-->
    <string-array name="kindArray">
        <item>松狮</item>
        <item>阿拉斯加</item>
        <item>比熊</item>
        <item>法国斗牛</item>
        <item>贵宾犬</item>
        <item>哈士奇</item>
        <item>金毛</item>
        <item>拉布拉多</item>
        <item>萨摩耶</item>
    </string-array>

    <string name="relogin_toast">尚未登录，请登录!</string>
</resources>
