<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/primary_padding">


    <TextView
        android:id="@+id/tv_title_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@mipmap/icon_back"
        android:gravity="center"
        android:text="@string/title_back"
        android:textColor="@color/colorFontPrimaryDark"
        android:textSize="@dimen/title_font_size" />

    <TextView
        android:id="@+id/img_titile_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:drawableRight="@mipmap/icon_back"
        android:gravity="center"
        android:text="@string/title_confirm"
        android:textColor="@color/colorFontPrimaryDark"
        android:textSize="@dimen/title_font_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/img_titile_right"
        android:layout_toRightOf="@id/tv_title_left"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorFontPrimaryDark"
        android:textSize="@dimen/title_font_size" />
</RelativeLayout>
