<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layer_order_confirm_title"
        layout="@layout/layer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/fee_tips"
            android:textColor="@color/colorFontPrimaryDark" />

        <RelativeLayout
            android:id="@+id/layer_order_confirm_confirm"
            style="@style/bottomLayerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/bottomTextBgStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_confirm" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layer_order_confirm_confirm"
        android:layout_below="@id/layer_order_confirm_title"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户信息" />

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户姓名" />

                    <Space style="@style/itemSpaceStyle" />

                    <EditText
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_user_name" />
                </LinearLayout>

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户手机" />

                    <Space style="@style/itemSpaceStyle" />

                    <EditText
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_user_phone" />
                </LinearLayout>

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户地址" />

                    <Space style="@style/itemSpaceStyle" />

                    <EditText
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_user_address" />

                    <Space style="@style/itemSpaceStyle" />

                    <TextView
                        style="@style/button4CornerStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="订单信息" />

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        style="@style/itemEditTextStyle"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:lines="4" />
                </LinearLayout>

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="费用合计" />

                    <Space style="@style/itemSpaceStyle" />

                    <EditText
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_fee_total" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
