<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.navinfo.liuba.OrderInputActivity">

    <include
        android:id="@+id/layer_payment_confirm_title"
        layout="@layout/layer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/pay_success_tips"
            android:textColor="@color/colorFontPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/layer_my_order_list"
                style="@style/bottomLayerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/bottomTextBgStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/order" />
            </RelativeLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/layer_my_order_confirm"
                style="@style/bottomLayerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/bottomTextBgStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_confirm" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layer_payment_confirm_title"
        android:gravity="center"
        android:paddingTop="@dimen/fab_margin"
        android:text="支付成功"
        android:textColor="@color/colorFontPrimaryDark"
        android:textSize="@dimen/payment_success" />
</RelativeLayout>
