<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.navinfo.liuba.OrderInputActivity">

    <include
        android:id="@+id/layer_order_input_title"
        layout="@layout/layer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>

    <LinearLayout
        android:id="@+id/layer_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/fee_tips"
            android:textColor="@color/colorFontPrimaryDark" />

        <RelativeLayout
            android:id="@+id/layer_order_input_confirm"
            style="@style/bottomLayerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/bottomTextBgStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_confirm" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layer_bottom"
        android:layout_below="@id/layer_order_input_title"
        android:padding="@dimen/fab_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选择日期" />

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="预约日期" />

                    <Space style="@style/itemSpaceStyle" />

                    <TextView
                        android:id="@+id/edt_order_input_date"
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_reservation_date"
                        android:inputType="none" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选择时间" />

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="开始时间" />

                    <Space style="@style/itemSpaceStyle" />

                    <TextView
                        android:id="@+id/edt_order_input_time"
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_start_time"
                        android:inputType="none" />
                </LinearLayout>

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="遛狗时长" />

                    <Space style="@style/itemSpaceStyle" />


                    <TextView
                        android:id="@+id/edt_order_input_timeLong"
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_time_long"
                        android:inputType="none" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/item_padding_horzontal"
                        android:text="小时" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选择范围" />

                <LinearLayout
                    style="@style/itemLayerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/itemTvStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="遛狗区域" />

                    <Space style="@style/itemSpaceStyle" />

                    <TextView
                        android:id="@+id/edt_order_input_distance"
                        style="@style/itemEditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_time_long"
                        android:inputType="none" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_padding_horzontal"
                        android:layout_gravity="center"
                        android:text="千米" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
